--- a/index.html
+++ b/index.html
@@ -1,1 +1,109 @@
-"Hello, my name is Justin W. Week 2 video" 
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Justin Wilson</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="img/my_icon.png" type="image/png">
+
+    <!-- Animate.css, Licensed under the MIT license -->
+    <link rel="stylesheet" href="css/animate.css">
+    <!-- Icomoon Icon Fonts-->
+    <!--<link rel="stylesheet" href="css/icomoon.css">-->
+    <!-- Bootstrap, Licensed under MIT  -->
+    <link rel="stylesheet" href="css/bootstrap.css">
+    <!-- Theme style -->
+    <link rel="stylesheet" href="css/style.css">
+
+    </head>
+    <body>
+
+    <!--<div id="main">-->
+        <div class="tab-wrap">
+            <ul class="tab-menu">
+                <li class="active"><a href="#" data-tab="1"><span class="menu-text">About Me</span></a></li>
+                <li><a href="#" data-tab="2"><span class="menu-text">Education</span></a></li>
+                <li><a href="#" data-tab="3"><span class="menu-text">Interests</span></a></li>
+            </ul>
+            <div class="tab-content active" data-content="1">
+                <div class="content-inner">
+                    <div class="row row-bottom-padded-sm">
+                        <div class="col-md-12">
+                            <div class="header-photo">
+                                <img src="img/justinwilson.jpg">
+                            </div>
+                            <div class="header-content">
+                            <h1>Justin Wilson</h1>
+                            <h2>Research Scientist and Part-Time Adjunct Professor</h2>
+                            <p>I received my Ph.D. in Computer Science from University of North Carolina at Chapel Hill in December 2020. My research interests include physically-based modeling, virtual reality, and machine learning.</p>
+        <p><span>Email: </span>jwilso86 at gmu dot edu</p>
+        <!--<p><span></span><a href="Justin_A_Wilson_Resume_2025.pdf">Resume / Curriculum Vitae (CV)-->
+        <p><span></span><a href="Sample_Resume.docx">Resume / Curriculum Vitae (CV)
+        </a></p>
+        <p><span></span><a href="https://www.cs.unc.edu/~wilson/dissertation.html">Ph.D. Dissertation
+        </a></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-content" data-content="2">
+                <div class="content-inner">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="feature">           
+                                <img src="img/unc.png" alt="University of North Carolina at Chapel Hill" />
+                                <div class="text">
+                                    <h2>2016-2020</h2>
+                                    <p>Ph.D., Department of Computer Science<br>
+                                    University of North Carolina at Chapel Hill</p>
+                                </div>
+                            </div>
+                            <div class="feature">
+                                <img src="img/lu.png" alt="Lehigh University" />
+                                <div class="text">
+                                    <h2>2003-2007</h2>
+                                    <p>Bachelor of Science, Business and Engineering<br>
+                                    Concentration in Electrical Engineering<br>
+                                    Lehigh University</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="tab-content" data-content="3">
+                <div class="content-inner">
+                    <div class="row">
+
+                        <div id="content">
+                            <div id="cv-section-item">
+                                <div id="cv-section-item-image"> <img src="images/eccv22.png" alt="" /></div>
+                                <div id="cv-section-item-content">
+                                    To be updated
+                                </div>
+                                <!--end cv-section-item-content-->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    <!--</div>-->
+
+    <!-- jQuery, jquery.org/license -->
+    <script src="js/jquery.min.js"></script>
+    <!-- jQuery Easing, Open source under the BSD License -->
+    <script src="js/jquery.easing.1.3.js"></script>
+    <!-- Bootstrap, Licensed under the MIT license -->
+    <script src="js/bootstrap.min.js"></script>
+    <!-- Waypoints, Licensed under the MIT license -->
+    <script src="js/jquery.waypoints.min.js"></script>
+    <!-- Easy PieChart -->
+    <!--<script src="js/jquery.easypiechart.min.js"></script>-->
+    <!-- MAIN JS -->
+    <script src="js/main.js"></script>
+
+    </body>
+</html>
